# Weather-Adjusted-Generation-Analytics

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  STATUS.md  TODO.md  dagster_cloud.yaml  pyproject.toml  setup.sh
.github/workflows/: branch_deployments.yml  build-dashboard.yml  ci.yml  deploy.yml
dags/dagster_project/: __init__.py  dagster.yaml  workspace.yaml
dags/dagster_project/assets/: __init__.py
dags/dagster_project/jobs/: __init__.py
dags/dagster_project/resources/: __init__.py
dags/dagster_project/schedules/: __init__.py
dags/dagster_project/sensors/: __init__.py
dbt/renewable_dbt/: dbt_project.yml
dbt/renewable_dbt/macros/: calculate_capacity_factor.sql  generate_schema_name.sql
dbt/renewable_dbt/models/: sources.yml
dbt/renewable_dbt/models/marts/: dim_asset.sql  mart_asset_performance_daily.sql  mart_asset_weather_performance.sql  marts.yml
dbt/renewable_dbt/models/metricflow/: _metricflow_time_spine.yml  metricflow_time_spine.sql
dbt/renewable_dbt/models/semantic_models/: _semantic_models.yml
dbt/renewable_dbt/profiles/: profiles.yml
dbt/renewable_dbt/seeds/: _seeds.yml  asset_dimension.csv
docs/: local-scheduling.md
docs/archive/dev-cycle/: runtime-mock-data.state.md  snowflake-infra-deploy.state.md
docs/archive/plans/: 2026-04-11-runtime-mock-data-generation-design.md  runtime-mock-data.md
docs/dev-cycle/: dashboard-ui.phase1-handoff.md  dashboard-ui.state.md  snowflake-infra-deploy.state.md  waga-overhaul.state.md
docs/planning/: pytest-phased-approach.md  testing-roadmap.md
docs/planning/phase-1/: 01-dev-dependencies.md  02-pytest-config.md  03-tests-layout.md  04-smoke-test.md  05-local-commands.md  README.md
docs/planning/phase-2/: 01-fixture-strategy.md  02-polars-factories.md  03-sample-parquet-data.md  04-duckdb-fixtures.md  05-markers-and-test-selection.md  README.md
docs/planning/phase-3/: 01-scope-and-acceptance.md  02-polars-utils-tests.md  03-logging-utils-tests.md  04-settings-tests.md  05-execution-and-selection.md  README.md
docs/planning/phase-4/: 01-scope-and-acceptance.md  02-weather-and-generation-loaders.md  03-dlt-pipeline-tests.md  04-mocking-strategy.md  05-execution-and-selection.md  README.md
docs/planning/phase-5/: 01-scope-and-acceptance.md  02-dbt-integration.md  03-dagster-assets.md  04-e2e-smoke.md  05-execution-and-selection.md  FINAL_SUMMARY.md  README.md
docs/plans/: dashboard-ui.md  snowflake-infra-deploy.md
docs/snowflake/: bootstrap.sql
docs/superpowers/plans/: 2026-07-04-waga-static-dashboard.md  2026-07-09-warmup-lookback.md
docs/superpowers/specs/: 2026-04-05-snowflake-infra-deploy-design.md  2026-04-11-dashboard-ui-design.md  2026-07-04-waga-static-dashboard-design.md  2026-07-09-warmup-lookback-design.md
notebooks/: eda_weather.ipynb
scripts/: build_dashboard_app.py  build_local_dashboard.py  generate_asset_seed.py  install_launchd.py  push_dashboard_build.py  run_scheduled.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/loaders/: __init__.py  dlt_pipeline.py  generation_loader.py  weather_loader.py
src/mock_data/: __init__.py  generate_generation.py  generate_weather.py
src/utils/: __init__.py  logging_utils.py  polars_utils.py
src/weather_analytics/: __init__.py  definitions.py  schedules.py
src/weather_analytics/assets/: __init__.py  dbt_assets.py
src/weather_analytics/checks/: __init__.py  dashboard.py  data_quality.py
src/weather_analytics/cockpit/: __init__.py  __main__.py  charts.py  cli.py  cloudflare.py  config.py  data.py  render.py  serve.py
src/weather_analytics/dashboard/: __init__.py  app.py  data_loader.py  theme.py
src/weather_analytics/lib/: __init__.py  config.py  logging.py  polars_utils.py
src/weather_analytics/mock_data/: __init__.py  fleet.py  generate_generation.py  generate_weather.py  local_export.py  physics.py  simulate.py  weather_sources.py
src/weather_analytics/resources/: __init__.py  dlt_resource.py  portfolio_repo.py  snowflake.py
tests/: __init__.py  conftest.py
tests/cockpit/: conftest.py  test_charts.py  test_cli.py  test_cloudflare.py  test_config.py  test_data.py  test_render.py  test_serve.py
tests/cockpit/fixtures/: assets.json  daily_performance.json  manifest.json  weather_performance.json
tests/data/: generation_2023-01-01.parquet  weather_2023-01-01.parquet
tests/fixtures/: __init__.py  dbt_cli.py  duckdb_fixtures.py  parquet_builders.py  polars_factories.py
tests/integration/: test_dagster_assets_smoke.py  test_dbt_smoke.py  test_e2e_smoke.py
tests/unit/: test_correlation_asset.py  test_dashboard_bundler.py  test_dashboard_checks.py  test_dashboard_data_loader.py  test_dashboard_export.py  test_dashboard_theme.py  test_data_quality_checks.py  test_dbt_assets.py  test_definitions_smoke.py  test_dlt_pipeline.py  test_dlt_resource.py  test_ensure_key_file.py  test_fleet.py  test_fleet_simulation.py  test_generate_weather_data.py  test_generation_ingestion.py  test_generation_loader.py  test_install_launchd.py  test_logging_utils.py  test_mock_data_generation.py  test_phase2_fixtures.py  test_physics.py  test_polars_utils.py  test_polars_utils_lazy.py  test_run_scheduled.py  test_schedules.py  test_semantic_models.py  test_settings.py  test_smoke.py  test_snowflake_resource.py  test_waga_config.py  test_weather_ingestion.py  test_weather_loader.py  test_weather_sources.py
tests/unit/dashboard/: test_asset_view.py  test_chart_helpers.py  test_filters.py  test_fleet_view.py  test_kpi_cards.py  test_weather_view.py
weather_adjusted_generation_analytics/: __init__.py
weather_adjusted_generation_analytics/config/: __init__.py  settings.py
weather_adjusted_generation_analytics/loaders/: __init__.py  dlt_pipeline.py  generation_loader.py  weather_loader.py
weather_adjusted_generation_analytics/mock_data/: __init__.py  generate_generation.py  generate_weather.py
weather_adjusted_generation_analytics/utils/: __init__.py  logging_utils.py  polars_utils.py
(+25 files in other folders)
