[project]
name = "renewable-performance-pipeline"
version = "0.1.0"
description = "Production-grade analytics pipeline for weather-adjusted renewable asset performance"
authors = [
    {name = "Charles Coonce", email = "charlescoonce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "dagster-dbt>=0.21.0",
    "dbt-core>=1.5.0",
    "dbt-duckdb>=1.5.0",
    "polars[rtcompat]>=0.19.0",
    "duckdb>=0.9.0",
    "dlt[duckdb]>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "matplotlib>=3.10.7",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "D203", "D213"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "ARG", "S101"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["dagster.*", "dlt.*", "polars.*", "duckdb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src --cov-report=term-missing"
markers = [
    "unit: fast, isolated unit tests",
    "integration: slower tests that touch external systems",
    "io: filesystem I/O tests",
    "duckdb: tests that use DuckDB",
    "dagster: tests that exercise Dagster assets/jobs",
    "dbt: tests that validate/run dbt models or compiled SQL",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.dagster]
module_name = "dags.dagster_project"
working_directory = "dags/dagster_project"
pythonpath = ["src", "dags"]
