[project]
name = "renewable-performance-pipeline"
version = "0.1.0"
description = "Production-grade analytics pipeline for weather-adjusted renewable asset performance"
authors = [
    {name = "Charles Coonce", email = "charlescoonce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "dagster>=1.9.0,<1.12.20",
    "dagster-webserver>=1.9.0,<1.12.20",
    "dagster-dbt>=0.25.0",
    "dbt-core>=1.5.0",
    "dbt-snowflake>=1.5.0",
    "polars[rtcompat]>=0.19.0",
    "dlt[snowflake]>=0.4.0",
    "snowflake-connector-python>=3.6.0,<4.0.0",
    "dagster-cloud>=1.9.0,<1.12.20",
    "dagster-snowflake>=0.25.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "matplotlib>=3.10.7",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "pygithub>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
    "panel>=1.6.0,<1.7.0",
    "bokeh>=3.5.0,<3.8.0",
]
dashboard = [
    "panel>=1.6.0,<1.7.0",
    "bokeh>=3.5.0,<3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_analytics"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "D203", "D213"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "ARG", "S101"]
# Dashboard module: panel/bokeh/js imports are lazy so the module can be
# imported in non-Pyodide contexts (tests, local dev) without those packages.
# Any-typed returns for JSON and exception ergonomics for user-facing errors
# are deliberate and specific to this module's Pyodide role.
"src/weather_analytics/dashboard/*" = [
    "PLC0415",  # lazy imports required for Pyodide/test compatibility
    "ANN401",   # JSON payloads are genuinely Any
    "TRY003",   # user-facing error strings are fine here
    "EM101",
    "EM102",
    "BLE001",   # fetch failures are uniformly converted to a banner
    "PLR0913",  # filter helpers intentionally take 6 args for clarity
]
# CI utility scripts use print() for user-visible log output.
"scripts/*" = ["T201", "INP001"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dagster.*",
    "dlt.*",
    "polars.*",
    "snowflake.*",
    "cryptography.*",
    "github.*",
    "panel.*",
    "bokeh.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src/weather_analytics --cov-report=term-missing"
markers = [
    "unit: fast, isolated unit tests",
    "integration: slower tests that touch external systems",
    "io: filesystem I/O tests",
    "dagster: tests that exercise Dagster assets/jobs",
    "dbt: tests that validate/run dbt models or compiled SQL",
    "snowflake: tests that interact with Snowflake",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.dagster]
module_name = "weather_analytics"
working_directory = "."
pythonpath = [".", "src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
